// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders info message when no items match search 1`] = `
<article
  class="sc-htoDjs dYeNTb sc-gzVnrw kxMSbM"
>
  <h1
    class="sc-iwsKbI uTWQM sc-dnqmqq fQdBaG"
  >
    Bolverk failed to find items for 
    <strong
      class="sc-EHOje gLWsgx"
    >
      xxx
    </strong>
  </h1>
</article>
`;

exports[`renders loaded item 1`] = `
<article
  class="sc-htoDjs dYeNTb sc-gzVnrw kxMSbM"
>
  <h1
    class="sc-iwsKbI uTWQM sc-dnqmqq fQdBaG"
  >
    Items found for 
    <strong
      class="sc-EHOje gLWsgx"
    >
      ale
    </strong>
  </h1>
  <ul
    class="sc-ifAKCX hEkxEp"
  >
    <li
      class="sc-htpNat cDJghx"
    >
      <a
        class="sc-bxivhb kPYQCs"
        href="/item/alettes-bracelet"
      >
        <img
          class="sc-bdVaJa hpZUqN"
          src="undefinedalettes-bracelet.png"
        />
        <p
          class="sc-bwzfXH fMjatQ"
        >
          1
        </p>
      </a>
    </li>
    <li
      class="sc-htpNat cDJghx"
    >
      <a
        class="sc-bxivhb kPYQCs"
        href="/item/whalebone-needle"
      >
        <img
          class="sc-bdVaJa hpZUqN"
          src="undefinedwhalebone-needle.png"
        />
        <p
          class="sc-bwzfXH fMjatQ"
        >
          1
        </p>
      </a>
    </li>
  </ul>
</article>
`;

exports[`renders loading state initially 1`] = `
<article
  class="sc-htoDjs dYeNTb sc-gzVnrw kxMSbM"
/>
`;
